...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter you email:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6zu-IX-k22">
                                        <rect key="frame" x="0.0" y="40.5" width="334" height="34"/>
                                        <color key="backgroundColor" red="0.91269167090000003" green="1" blue="0.91900415040000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qwB-d9-uDu">
                                        <rect key="frame" x="0.0" y="94.5" width="334" height="34"/>
                                        <color key="backgroundColor" red="0.91269167090000003" green="1" blue="0.91900415040000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                            <constraint firstAttribute="height" constant="40" id="RKn-76-Xmi"/>
                                        </constraints>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="40" id="RXW-bO-8FU"/>
                                        </constraints>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                <rect key="frame" x="15" y="79" width="57" height="34"/>
                                <color key="backgroundColor" red="0.74458965079999995" green="0.9323263987" blue="0.68401053450000004" alpha="0.57127530810000005" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Save to my Wishlist">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Choose My Plant">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.74458965079999995" green="0.9323263987" blue="0.68401053450000004" alpha="0.57127530810000005" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="Back">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="My wishlist">
                                    <color key="titleColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
